--- a/public/css/style.css
+++ b/public/css/style.css
@@ -241,7 +241,7 @@ button {
 }
 
 .layout_padding {
-    padding-top: 90px;
+    /* padding-top: 90px; */
     padding-bottom: 0px;
 }
 
@@ -256,7 +256,7 @@ button {
     width: 100%;
     float: left;
     background-image: url(../images/gov3.jpg);
-    height: auto;
+    height: 99vh;
     background-size: 100%;
     padding: 0px 0px 20px 0px;
 }
@@ -324,12 +324,18 @@ button {
     position: fixed; */
     border: 3px solid white;
     background-image: linear-gradient(to right, white, #faf0e6);
-    border-radius: 35px;
+    border-radius: 13px;
     display: flex;
     justify-content: space-between;
-    padding: 5px 10px;
+    padding: 10px 30px;
     padding-bottom: auto;
     position: fixed;
+    /* left: 0px; */
+    /* transform: translate(-50%,50%); */
+    /* right: 20px; */
+    align-items: center;
+    height: 70px;
+    width: 96%;
     z-index: 1000; /* Ensures the navbar stays on top of other content */
 }
 
@@ -338,24 +344,31 @@ button {
     padding: 0px;
     list-style: none;
     display: flex;
+    /* gap: 2rem; */
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .menu_main li {
     /* float: left; */
-    padding-left: 10px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
     font-size: 14px;
     text-transform: uppercase;
-    padding-top: 30px;
-    padding-bottom: 5px;
+    /* padding-top: 30px; */
+    /* padding-bottom: 5px; */
     color: black;
-    border-radius: 40px;
+    /* border-radius: 40px; */
+    display: block;
 }
 
 .menu_main li a {
     color: black;
+    /* gap: 2rem; */
     padding: 10px 16px;
     border-radius: 10px;
+    /* margin-top: 100px; */
 }
 
 .menu_main li a:hover {
@@ -386,7 +399,7 @@ button {
 .banner_section {
     width: 100%;
     float: left;
-    padding-bottom: 200px;
+    /* padding-bottom: 200px; */
 }
 
 .banner_taital {
