--- a/public/css/style.css
+++ b/public/css/style.css
@@ -335,13 +335,13 @@ button {
     /* right: 20px; */
     align-items: center;
     height: 70px;
-    width: 96%;
+    width: 97.7%;
     z-index: 1000; /* Ensures the navbar stays on top of other content */
 }
 
 .menu_main ul {
     margin: 0px;
-    padding: 0px;
+    padding-top: 13px;
     list-style: none;
     display: flex;
     /* gap: 2rem; */
@@ -597,6 +597,7 @@ button {
 }
 
 .services-container {
+    margin-top: 120px;
     max-width: 100%;
     padding: 20px;
 }
