--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -309,7 +309,7 @@
         padding: 0px;
     }
     .navbar-expand-lg .navbar-nav .nav-link {
-        color: #ffffff;
+        color: black;
         text-align: center;
         background: transparent;
         width: 100%;
@@ -319,18 +319,25 @@
     .nav-item {
         position: relative;
         width: 100%;
+        background-color:  #e6e2dd;
+        margin-top: 0.7rem;
+    margin-bottom: 1px;
+    padding: 1px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
     }
     .navbar-light .navbar-nav .nav-link:focus,
     .navbar-light .navbar-nav .nav-link:hover {
         color: #ffffff;
-        background: blue;
+        background: #e6e2dd;
     }
     .navbar-light .navbar-nav .active>.nav-link,
     .navbar-light .navbar-nav .nav-link.active,
     .navbar-light .navbar-nav .nav-link.show,
     .navbar-light .navbar-nav .show>.nav-link {
         color: #ffffff;
-        background: red;
+        background: #e6e2dd;
     }
     .banner_text {
         width: 100%;
@@ -513,18 +520,25 @@
     .nav-item {
         position: relative;
         width: 100%;
+        background-color: #e6e2dd;
+        margin-top: 0.7rem;
+    margin-bottom: 1px;
+    padding: 1px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
     }
     .navbar-light .navbar-nav .nav-link:focus,
     .navbar-light .navbar-nav .nav-link:hover {
         color: #ffffff;
-        background: red;
+        background: #e6e2dd;
     }
     .navbar-light .navbar-nav .active>.nav-link,
     .navbar-light .navbar-nav .nav-link.active,
     .navbar-light .navbar-nav .nav-link.show,
     .navbar-light .navbar-nav .show>.nav-link {
         color: #ffffff;
-        background: red;
+        background: #e6e2dd;
     }
     .banner_text {
         width: 100%;
