--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -13,6 +13,14 @@
 /*------------------------------------------------------------------- 767px x 599px ---------------------------------------------------------------------*/
 
 @media only screen and (min-width: 599px) and (max-width: 767px) {
+    .officer-container {
+        width: 80%;
+        /* margin: 0 auto; */
+        padding: 0px;
+        background-color: black;
+        border-radius: 8px;
+        display: flex;
+    }
     .logo {
         text-align: center;
     }
@@ -265,6 +273,19 @@
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
+    
+.officer-container {
+    width: 80%;
+    /* margin: 0 auto; */
+    padding: 0px;
+    background-color: black;
+    border-radius: 8px;
+    display: flex;
+}
+
+
+
+
     .navbar-light .navbar-toggler {
         color: rgba(0, 0, 0, .5);
         border-color: transparent;
@@ -666,4 +687,14 @@
         padding-top: 90px;
     }
 
+}
+@media (max-width:760){
+    .officer-container {
+        width: 80%;
+        /* margin: 0 auto; */
+        padding: 0px;
+        background-color: black;
+        border-radius: 8px;
+        display: flex;
+    }
 }
