--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,7 +255,7 @@ button {
 .header_section {
     width: 100%;
     float: left;
-    background-image: url(../images/gov3.jpg);
+    /* background-image: url(../images/gov3.jpg); */
     height: 99vh;
     background-size: cover;
     padding: 0px 0px 20px 0px;
@@ -386,7 +386,7 @@ button {
 
 .header_main {
     width: 100%;
-    background-image: url(../images/gov3.jpg);
+    /* background-image: url(../images/gov3.jpg); */
     background-size: 100%;
     padding: 10px 0px 110px 0px;
 }
