--- a/public/css/style.css
+++ b/public/css/style.css
@@ -610,7 +610,7 @@ button {
     width: 100%;
     overflow-x: auto;
     padding-bottom: 20px;
-    
+    padding-left: 20rem;
 }
 
 .services-track {
