--- a/public/css/style.css
+++ b/public/css/style.css
@@ -853,6 +853,35 @@ a:hover {
 
 /* card section end */
 
+/* Information Table section start */
+
+.information-container {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.information-row {
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.information-column {
+    flex: 1;
+    padding: 10px;
+}
+
+@media (max-width: 768px) {
+    .information-column {
+        flex: 100%;
+        padding: 5px 0;
+    }
+}
+
+
+
+/*Information Table section end */
+
 /* blog section start */
 
 .blog_section {
