--- a/public/css/style.css
+++ b/public/css/style.css
@@ -458,7 +458,7 @@ button {
 .services_section {
     width: 100%;
     float: left;
-    padding-bottom: 90px;
+    /* padding-bottom: 90px; */
 }
 
 .services_taital {
@@ -700,6 +700,29 @@ button {
     justify-content: space-between;
     padding-top: 5%;
     padding-left: 50px;
+}
+.latest-info-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 5%;
+    padding-left: 50px;
+    padding-bottom: 155px;
+}
+.latest-info-container h1 {
+    text-align: center;
+    color: #003366;
+    font-weight: bold;
+    font-size: 40px;
+    margin-bottom: 0px;
+}
+.latest-update-box {
+    width: 100%;
+    max-width: 1100px;
+    margin: 50px auto 0;
+    background-color: #ffffff;
+    box-shadow: 0px 1px 16px -6px;
+    border-radius: 30px;
+    padding: 20px 50px;
 }
 .latest-section {
     width: 48%;
