--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,7 +207,9 @@ blockquote {
     margin: 20px 0 20px;
     padding: 30px;
 }
-
+.d-block w-100 {
+    height: 700px;
+}
 
 .download-button {
     display: inline-block;
@@ -313,15 +315,6 @@ button {
 }
 
 .menu_main {
-    /* -ms-flex-direction: column;
-    flex-direction: column;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-    width: 100%;
-    text-align: center;
-    margin: 0 auto;
-    position: fixed; */
     border: 3px solid white;
     background-image: linear-gradient(to right, white, #faf0e6);
     border-radius: 13px;
@@ -329,11 +322,7 @@ button {
     justify-content: space-between;
     padding: 10px 30px;
     padding-bottom: auto;
-    position: fixed;
-    /* left: 0px; */
-    /* transform: translate(-50%,50%); */
-    /* right: 20px; */
-    align-items: center;
+    position: fixed;    align-items: center;
     height: 70px;
     width: 97.7%;
     z-index: 1000; /* Ensures the navbar stays on top of other content */
@@ -347,7 +336,6 @@ button {
     /* gap: 2rem; */
     align-items: center;
     justify-content: center;
-    
 }
 
 .menu_main li {
@@ -356,8 +344,6 @@ button {
     padding-right: 0px;
     font-size: 14px;
     text-transform: uppercase;
-    /* padding-top: 30px; */
-    /* padding-bottom: 5px; */
     color: black;
     /* border-radius: 40px; */
     display: block;
