--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -442,11 +442,25 @@
         width: 100%;
         background-color:  #e6e2dd;
         margin-top: 0.7rem;
-    margin-bottom: 1px;
-    padding: 1px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
+        margin-bottom: 1px;
+        padding: 1px;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .dropdown{
+        position: relative;
+        width: 100%;
+        background-color:  #e6e2dd;
+        margin-top: 0.7rem;
+        margin-bottom: 1px;
+        padding: 1px;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .dropdown-content li a{
+        color: white;
     }
     .navbar-light .navbar-nav .nav-link:focus,
     .navbar-light .navbar-nav .nav-link:hover {
@@ -676,11 +690,26 @@
         width: 100%;
         background-color: #e6e2dd;
         margin-top: 0.7rem;
-    margin-bottom: 1px;
-    padding: 1px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
+        margin-bottom: 1px;
+        padding: 1px;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .dropdown{
+        position: relative;
+        width: 100%;
+        background-color:  #e6e2dd;
+        margin-top: 0.7rem;
+        margin-bottom: 1px;
+        padding: 1px;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+    }
+    .dropdown-header{
+        color: white;
+        text-align: center;
     }
     .navbar-light .navbar-nav .nav-link:focus,
     .navbar-light .navbar-nav .nav-link:hover {
